--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
-    "jest": "^24.9.0"
+    "core-js": "^3.4.1",
+    "jest": "^24.9.0",
+    "regenerator-runtime": "^0.13.3"
   },
   "dependencies": {}
 }
